# fact-checker

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  checklists.json
docs/: api.md  architecture.md  operations.md
examples/: request.json  response.json
src/fact_checker/: __init__.py  __main__.py  api.py  catalog.py  checker.py  config.py  logging_config.py  model_client.py  prompts.py  schemas.py
tests/: conftest.py  test_api.py  test_catalog.py  test_checker.py
